# solar-rs

./: Cargo.toml  LICENSE  LICENSE.md  README.md  build.sh  run.sh
data/: earth.toml  jupiter.toml  mars.toml  neptune.toml  pluto.toml  saturn.toml  sedna.toml  sun.toml  uranus.toml  venus.toml
src/: main.rs
