[package]
name = "solar-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solar-rs"
path = "src/main.rs"

[dependencies]
ash = "0.38.0"
clap = { version = "4.6.0", features = ["derive"] }
sdl3 = { version = "0", features = ["ash"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
